[gd_scene load_steps=4 format=3 uid="uid://b56dqpcl8gajh"]

[ext_resource type="Script" uid="uid://cw1voa1lap85d" path="res://src/world/plataforma.gd" id="1_odf2y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc5i5"]
size = Vector2(261.5, 21.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44fqv"]
size = Vector2(262, 38)

[node name="Plataforma" type="Node2D"]
script = ExtResource("1_odf2y")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(120.04, 2.00315)
scale = Vector2(4.0925, -0.343652)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(120.25, 1.25)
shape = SubResource("RectangleShape2D_yc5i5")
debug_color = Color(0.912227, 0.187782, 0.570103, 0.419608)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -19)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(120, -9)
shape = SubResource("RectangleShape2D_44fqv")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
